# fuppes

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  PreRules.am  README  configure.ac  crosscompile_readynas.sh  crosscompile_win32.sh  eclipse.format.xml  postinstall.sh.in  valgrind.sh
config/: Makefile.am  fuppes.cfg.default
config/devices/: base.cfg  default-audio-only.cfg  default-transcoding-enabled.cfg  default.cfg  lg-tv.cfg  ps3.cfg  xbox.cfg
config/vfolders/: default.cfg  xbox.cfg  yamaha.cfg
include/: Makefile.am  fuppes.h  fuppes_database_objects.h  fuppes_database_plugin.h  fuppes_db_connection_plugin.h  fuppes_decoder.h  fuppes_encoder.h  fuppes_plugin.h  fuppes_plugin_types.h  fuppes_transcoder.h  fuppes_types.h  fuppes_upnp_object_types.h
resources/: Makefile.am  fuppes-browse.jquery.js  fuppes-browse.js  fuppes-config.jquery.js  fuppes-config.js  fuppes-control.js  fuppes-database.jquery.js  fuppes-database.js  fuppes-device.js  fuppes-log-worker.js  fuppes-log.js  fuppes-playlist.js  fuppes.jquery.js  fuppes.js  grid.css  layout.html  mootools-more-1.4.0.1.js  style.css
src/: .gitignore  Makefile.am  console_main.cpp  daemon_main.cpp
src/lib/: SharedLog.cpp  SharedLog.h  libmain.cpp
src/lib/Common/: Common.cpp  Common.h  DateTime.cpp  DateTime.h  Directory.cpp  Directory.h  Exception.cpp  Exception.h  File.cpp  File.h  RegEx.h  Socket.cpp  Socket.h  String.cpp  String.h  Timer.cpp  Timer.h  UUID.cpp  UUID.h  XMLParser.cpp  XMLParser.h
src/lib/Configuration/: BaseSettings.cpp  BaseSettings.h  Config.cpp  Config.h  ConfigFile.cpp  ConfigFile.h  ContentDatabase.cpp  ContentDatabase.h  DatabaseSettings.cpp  DatabaseSettings.h  DeviceIdentificationSettings.cpp  DeviceIdentificationSettings.h  FuppesConfig.cpp  FuppesConfig.h  GlobalSettings.cpp  GlobalSettings.h  Makefile.am  NetworkSettings.cpp  NetworkSettings.h  PathFinder.cpp  PathFinder.h  SharedObjects.cpp  SharedObjects.h  TranscodingSettings.cpp  TranscodingSettings.h  VirtualContainerSettings.cpp  VirtualContainerSettings.h
src/lib/ConnectionManager/: ConnectionManager.cpp  ConnectionManager.h  ConnectionManager.xml  ConnectionManagerDescription.cpp
src/lib/ContentDatabase/: Configuration.h  ContentDatabase.cpp  ContentDatabase.h  FileDetails.cpp  FileDetails.h  Makefile.am  RemoveMissingThread.cpp  RemoveMissingThread.h  ScanDirectoryThread.cpp  ScanDirectoryThread.h  SharedObject.h  UpdateThread.cpp  UpdateThread.h
src/lib/ContentDirectory/: ContentDatabase.cpp  ContentDatabase.h  ContentDirectory.cpp  ContentDirectory.h  ContentDirectory.xml  ContentDirectoryDescription.cpp  FileAlterationHandler.cpp  FileAlterationHandler.h  HotPlug.cpp  HotPlug.h  PlaylistFactory.cpp  PlaylistFactory.h  PlaylistParser.cpp  PlaylistParser.h
src/lib/ControlInterface/: CliControl.cpp  CliControl.h  ControlInterface.cpp  ControlInterface.h  SoapControl.cpp  SoapControl.h  SoapControlDescription.cpp
src/lib/Database/: Connection.cpp  Connection.h  Item.cpp  Item.h  ItemDetails.cpp  ItemDetails.h  ItemSource.cpp  ItemSource.h  Makefile.am  ObjectManager.cpp  ObjectManager.h  PreparedStatement.cpp  PreparedStatement.h  QueryBuilder.cpp  QueryBuilder.h  QueryResult.cpp  QueryResult.h  SearchCriteria.cpp  SearchCriteria.h  SortCriteria.cpp  SortCriteria.h  TableManager.cpp  TableManager.h
src/lib/DeviceIdentification/: DeviceConfigFile.cpp  DeviceConfigFile.h  DeviceConfiguration.cpp  DeviceConfiguration.h  DeviceSettings.cpp  DeviceSettings.h  IdentificationMgr.cpp  IdentificationMgr.h  IdentificationMgrConfig.h
src/lib/Dlna/: DLNA.cpp  DLNA.h  Item.h  Makefile.am  dlna_audio_profiles.h  dlna_image_profiles.h  dlna_video_profiles.h
src/lib/Fam/: EventHandler.h  Makefile.am  Monitor.cpp  Monitor.h  MonitorInotify.cpp  MonitorInotify.h  MonitorNull.h
src/lib/Fuppes/: Core.cpp  Core.h  FuppesHttpSession.cpp  FuppesHttpSession.h  HttpRequest.h  HttpResponse.h  RequestItem.cpp  RequestItem.h
src/lib/GENA/: EventNotification.cpp  EventNotification.h  SubscriptionMgr.cpp  SubscriptionMgr.h
src/lib/Http/: Client.cpp  Client.h  HttpHeader.cpp  HttpHeader.h  HttpServer.cpp  HttpServer.h  HttpSession.cpp  HttpSession.h  Makefile.am  Message.cpp  Message.h  Request.cpp  Request.h  Response.cpp  Response.h  ResponseCallback.cpp  ResponseCallback.h  ResponseFile.cpp  ResponseFile.h  StatusCode.h
src/lib/Log/: Log.cpp  Log.h  Logger.cpp  Logger.h  LoggerFile.h  LoggerStdout.cpp  LoggerStdout.h  LoggerSyslog.h  Makefile.am
src/lib/MediaServer/: MediaServer.cpp  MediaServer.h
src/lib/OldHTTP/: HTTPClient.cpp  HTTPClient.h  HTTPMessage.cpp  HTTPMessage.h  HTTPParser.cpp  HTTPParser.h
src/lib/Plugin/: AbstractDecoder.h  AbstractEncoder.h  AbstractTranscoder.h  Database.cpp  Database.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  Image.cpp  Image.h  ItemSource.cpp  ItemSource.h  Makefile.am  Manager.cpp  Manager.h  Metadata.cpp  Metadata.h  Plugin.cpp  Plugin.h  Transcoder.cpp  Transcoder.h
src/lib/Presentation/: Makefile.am  PageBrowse.cpp  PageBrowse.h  PageConfig.cpp  PageConfig.h  PageDatabase.cpp  PageDatabase.h  PageDebug.cpp  PageDebug.h  (+16 more)
src/plugins/: Makefile.am
src/windows/: Common.cpp  Common.h  Makefile.am  WinMain.cpp  WinMainForm.cpp  WinMainForm.h  WinService.cpp  fuppes.exe.Manifest  fuppes.rc
test/: Makefile.am  run-test-gdb.sh.in  run-test-valgrind.sh.in  run-test.sh.in
test/database/: Makefile.am  search-criteria-test.cpp  sort-criteria-test.cpp
test/fam/: Makefile.am  fam-test.cpp
test/file/: Makefile.am  file-test.cpp
test/framework/: BaseTest.cpp  BaseTest.h  Makefile.am  ToneGenerator.cpp  ToneGenerator.h  setup-test-env.cpp
test/http-server/: HttpCallbackSession.h  HttpFileSession.h  HttpSession.h  Makefile.am  http-request-test.cpp  http-server-test.cpp  large-file-test.cpp
test/log/: Makefile.am  log-test.cpp
test/security/: Makefile.am  security-test.cpp
test/thread/: Makefile.am  dummy-process.cpp  process-test.cpp  thread-test.cpp
test/transcoding/: Makefile.am  decoder-test.cpp  encoder-test.cpp  transcoderexternal-test.cpp  transcoding-test.cpp
(+112 files in other folders)
