## Process this file with automake to produce Makefile.in

include $(top_srcdir)/PreRules.am

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
    m4 \
    include \
    src/lib/Configuration \
    src/lib/ContentDatabase \
    src/lib/Database \
    src/lib/Dlna \
    src/lib/Fam \
    src/lib/Http \
    src/lib/Log \
    src/lib/Plugin \
    src/lib/Presentation \
    src/lib/Security \
    src/lib/Thread \
    src/lib/Transcoding \
    src/lib/VirtualContainer \
    src \
    src/plugins \
    src/windows \
    resources \
    config \
    test

EXTRA_DIST = \
    README \
    COPYING \
    AUTHORS \
    ChangeLog \
    INSTALL \
    NEWS \
    configure.ac \
    Makefile.am \
    src/lib/Configuration/Makefile.am \
    src/lib/ContentDatabase/Makefile.am \
    src/lib/Database/Makefile.am \
    src/lib/Dlna/Makefile.am \
    src/lib/Fam/Makefile.am \
    src/lib/Http/Makefile.am \
    src/lib/Log/Makefile.am \
    src/lib/Plugin/Makefile.am \
    src/lib/Presentation/Makefile.am \
    src/lib/Security/Makefile.am \
    src/lib/Thread/Makefile.am \
    src/lib/Transcoding/Makefile.am \
    src/lib/VirtualContainer/Makefile.am \
    src/Makefile.am \
    src/plugins/Makefile.am \
    src/windows/Makefile.am \
    src/windows/fuppes.exe.Manifest \
    src/windows/fuppes.ico \
    include/Makefile.am \
    resources/Makefile.am \
    config/Makefile.am \
    crosscompile_win32.sh \
    test/Makefile.am \
    postinstall.sh.in

