
include $(top_srcdir)/PreRules.am

noinst_HEADERS = \
  fuppes.h \
  fuppes_types.h \
  fuppes_upnp_object_types.h \
  fuppes_plugin.h \
  fuppes_plugin_types.h \
  fuppes_database_plugin.h \
  fuppes_database_objects.h \
  fuppes_db_connection_plugin.h \
  fuppes_encoder.h \
  fuppes_decoder.h \
  fuppes_transcoder.h
