include $(top_srcdir)/PreRules.am

pixmapsdir = $(datadir)/fuppes
dist_pixmaps_DATA = \
	style.css \
	grid.css \
	layout.html \
	fuppes-icon-48x48.jpg \
	fuppes-icon-48x48.png \
	fuppes-icon-120x120.jpg \
	fuppes-icon-120x120.png \
	header-gradient.png \
	header-gradient-small.png \
	mootools-core-1.4.5-full-nocompat.js \
	mootools-more-1.4.0.1.js \
	fuppes.js \
	fuppes-browse.js \
	fuppes-control.js \
	fuppes-config.js \
	fuppes-database.js \
	fuppes-device.js \
	fuppes-playlist.js \
	fuppes-log.js \
	fuppes-log-worker.js \
	jquery-1.10.2.min.js \
	fuppes.jquery.js \
	fuppes-browse.jquery.js \
	fuppes-database.jquery.js
	

# mootool-more comes with
# - Fx.Scroll
# - Fx.Slide
# - Tips
# - Spinner

